# incubator-teaclave-trustzone-sdk

./: .gitignore  .gitmodules  build_optee_libraries.sh  environment
examples/: Makefile
examples/enc_mnist-rs/: CLAUDE.md  Makefile  README.md
examples/enc_mnist-rs/host/: Cargo.toml  Makefile
examples/enc_mnist-rs/host/src/: encrypt.rs  main.rs  tee.rs
examples/enc_mnist-rs/host/src/commands/: encrypt.rs  infer.rs  mod.rs
examples/enc_mnist-rs/proto/src/: lib.rs
examples/enc_mnist-rs/ta/: Cargo.toml
examples/enc_mnist-rs/ta/common/src/: model.rs
examples/enc_mnist-rs/ta/inference/: Makefile  build.rs  uuid.txt
examples/enc_mnist-rs/ta/inference/src/: key_manager.rs  main.rs  secure_storage.rs
examples/examples/secure_update-rs/host/src/: tee.rs
examples/key_manager-rs/: .gitignore  Makefile
examples/key_manager-rs/host/: Cargo.toml  Makefile
examples/key_manager-rs/host/src/: main.rs
examples/key_manager-rs/ta/: Cargo.toml  Makefile  build.rs  uuid.txt
examples/key_manager-rs/ta/src/: aes.rs  auth.rs  main.rs  rsa.rs  storage.rs
